# art-med_robots_ros

./: README.md  dependencies.rosinstall  install.sh
art_med_robots_action_client/: CMakeLists.txt  package.xml
art_med_robots_action_client/config/: default.rviz
art_med_robots_action_client/launch/: lx_jaco2_3f.launch
art_med_robots_action_client/scripts/: fake_grounding_publisher
art_med_robots_control/config/: jaco2_left_control.yaml  jaco2_right_control.yaml  robot_control.yaml  robot_sensors_control.yaml
art_med_robots_control/launch/: robot_control.launch  robot_sensors_control.launch
art_med_robots_control/src/: move_robot.py
art_med_robots_description/: package.xml
art_med_robots_description/launch/: robot_sensors_rviz.launch
art_med_robots_description/urdf/: pioneer-lx-jaco2-sensors.urdf.xacro  pioneer-lx-jaco2.urdf.xacro  robot.gazebo  robot_sensors.gazebo
art_med_robots_gazebo/: CMakeLists.txt
art_med_robots_gazebo/launch/: robot_gazebo.launch  robot_sensors_world.launch  robot_world.launch
art_med_robots_gazebo/worlds/: robot.world
control/: CMakeLists.txt  package.xml
control/config/: robot_control.yaml
control/launch/: robot_control.launch
control/src/: .move_robot.py.swp  move_robot.py  move_robot_sensors.py
description/: CMakeLists.txt  package.xml
description/launch/: robot_rviz.launch
description/urdf/: d46.urdf.xacro  pioneer-lx-jaco2.urdf  pioneer-lx-jaco2.urdf.xacro  pioneer-lx-jaco2.urdf.xacro.backup  (+1 more)
gazebo/: package.xml
launch/: CMakeLists.txt  package.xml  pioneer-lx-jaco2-joint-state-gui.launch
(+4 files in other folders)
