<package>
  <name>art_med_robots_control</name>
  <version>1.0.0</version>
  <description>ROS control package</description>
  <maintainer email="artmedgwu@gmail.com">ART-Med</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
